<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_dash"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/action1" />
        <item
            android:id="@+id/action_check"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/action2" />
        <item
            android:id="@+id/action_his"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/action3" />
        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/action4" />


    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/action_settime"
                android:icon="@drawable/ic_add_alert"
                android:title="@string/action5" />
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/action6" />
        </menu>
    </item>

</menu>
