<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/ic_check_box_black_24dp"
            android:title="@string/action1" />
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/action2" />
    </group>

    <item
        android:id="@+id/navigation_view_category_2">
        android:title="">
        <menu>
            <item
                android:id="@+id/navigation_item_3"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/action3" />
            <item
                android:id="@+id/navigation_item_4"
                android:icon="@drawable/ic_disconnect"
                android:title="@string/action4" />
            <item
                android:id="@+id/navigation_item_5"
                android:icon="@drawable/ic_history_black_24dp"
                android:title="@string/action5" />
        </menu>
    </item>
</menu>